# e-trading

./: .env.example  .env.test.template  .flake8  .gitignore  .pylintrc  AGENTS.md  ARCHITECTURE_ANALYSIS.md  BACKTRADER_MIGRATION_SUMMARY.md  CODING_CONVENTIONS.md  CORRECTED_ARCHITECTURE_ANALYSIS.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  INDICATOR_MIGRATION_SUMMARY.md  MIGRATION_PLAN.md  PAPER_TRADING_SETUP.md  README.md  REFACTOR_INDICATORS.md  REVIEW.md  TELEGRAM_CLEANUP_SUMMARY.md  TELEGRAM_SERVICE_FIXES.md  WEB_UI_ARCHITECTURE_FIXES.md  alembic.ini  check_password.py  cleaner-phase-0.txt  cleaner-plan.md  cleaner-report.md  cleaner.txt  debug_env.py  debug_lstm_issue.py  debug_report_command.py  diag_results.txt  docker-compose.yml  doit.txt  enhanced_multi_strategy_runner.py  example.txt  fix_all_permissions.sql  fix_telegram_permissions.sql  monitoring.txt  (+57 more)
.ai/: AGENTS.md
.ai/skills/: _tech-lead-coordinator.md  api-designer.md  architect.md  clean-code-enforcer.md  code-reviewer.md  debugging-specialist.md  fullstack-builder.md  performance-optimizer.md  project-bootstrapper.md  refactoring-expert.md  test-engineer.md  ui-ux-designer.md
.claude/: CLAUDE.md
.continue/mcpServers/: new-mcpServer.yaml
.cursor/rules/: coding-conventions.mdc
.github/workflows/: typecheck.yml
.kiro/: architecture-audit-report.md
.kiro/steering/: coding-conventions.md
cache_edgar/: tickers.txt
cache_edgar/code/: FINRA_FIELD_POPULATION_GUIDE.md  calculate_short_interest_pct.sql  calculate_short_interest_pct_uncapped.sql  populate_finra_calculated_fields.py  repair_finra_data.py  repair_float_shares.py  verify_edgar_floats_update.sql
config/: INDICATORS_CONFIG_GUIDE.md  screener_sets.yml
config/backtester/: backtester_config.json  custom_strategy_test.json  entry-rsi-and-bb_exit-atr.json  rsi_volume_supertrend_test.json  simple_test.json  trailing_stop_test.json
config/contracts/: broker.yaml  notifications.yaml  risk-management.yaml  strategy-risk.yaml  strategy.yaml  trading_bot.yaml
config/data/: binance_btcusdt.json  fundamentals.json  ibkr_spy.json  provider_rules.yaml  sample_data.json  yahoo_aapl.json
config/donotshare/: .env.example  .env.test  __init__.py  donotshare.py
config/enhanced_trading/: raspberry_pi_multi_strategy.json
config/examples/: enhanced_trading_config_examples.json
config/optimizer/: advanced_optimizer.json  hmm_lstm_01.json  optimize_entry.yaml  optimize_exit.yaml  optimize_hybrid_nn.json  optimizer.json  p01_hmm_lstm.json  p03_cnn_xgboost.json  sample_optimizer.json
config/pipeline/: activists.json  p01.yaml  p02.yaml  p03.yaml  p04_short_squeeze.yaml  x01.yaml  x02.yaml
config/plotter/: mixin_indicators.json
config/risk/: risk_management.yaml
config/schemas/: bot_config.yaml  screener_sets.yml
config/screener/: fmp_screener_criteria.json  my_screener.json
config/sentiments/: sentiments.json
config/strategy/: __init__.py  composite_strategies.json  (+6 more)
docs/: 5M_OPTIMIZER_CONFIGS.md  ADVANCED_ANALYTICS.md  ADVANCED_ATR_EXIT.md  ADVANCED_ML_FEATURES.md  ADVANCED_STRATEGY_FRAMEWORK.md  ALERT_SYSTEM.md  API.md  ARCHITECTURE_REVIEW_downloader.md  BACKTRADER_MIGRATION_SUMMARY.md  BOLLINGER_BANDS_ATTRIBUTES.md  CHANGELOG.md  CHANNEL_OWNERSHIP.md  CONFIGURATION.md  CONTEXT_AWARE_LOGGING.md  DATABASE.md  DATA_CACHE_REFRESH_GUIDE.md  DATA_DOWNLOADERS.md  DEVELOPER_GUIDE.md  ENVIRONMENT_SETUP.md  ERROR_HANDLING.md  FIXES_APPLIED.md  HEALTH_CHECK_CONSOLIDATION.md  HEALTH_CHECK_REFACTORING.md  HMM_LSTM_BACKTESTING_GUIDE.md  JOB_SCHEDULER.md  KB.md  LIVE_DATA_FEEDS.md  LIVE_TRADING_BOT.md  METRICS.md  MONITORING_ENDPOINT_DESIGN.md  MULTIPROCESSING_LOGGING.md  NOTIFICATION_SYSTEM.md  POSTGRESQL_MIGRATION.md  QUICK_DATA_REFRESH.md  RASPBERRY_PI_DEPLOYMENT.md  RASPBERRY_PI_QUICK_START.md  REFACTORING_DB_SERVICES_LAYER.md  RISK_MANAGEMENT.md  ROADMAP-2026.md  ROADMAP.md  (+20 more)
examples/: advanced_analytics_example.py  advanced_atr_exit_example.py  advanced_ml_example.py  advanced_strategy_example.py  alert_system_example.py  async_notification_example.py  backtest_example.py  backtrader_integration_example.py  backtrader_unified_indicators.py  broker_management_demo.py  coingecko_live_feed_example.py  config_example.py  create_alert_system.py  data_downloader_factory_example.py  data_manager_example.py  enhanced_binance_broker_demo.py  enhanced_ibkr_broker_demo.py  error_handling_example.py  hmm_lstm_backtest_example.py  hybrid_cnn_lstm_train.py  hybrid_xgboost_train.py  job_scheduler_test.py  multi_strategy_paper_trading.py  nn_regime_detection_example.py  risk_management_example.py  telegram_management_example.py  telegram_service_layer_example.py
schemas/: bot_config.yaml
scripts/: check_metrics.py  check_notifications.py  download_historical_mc.py  inspect_anomaly.py  populate_finra_calculated_fields.py  register_bot_in_db.py  repair_finra_data.py  typecheck.py
src/: __init__.py  mock-websocket-server.js
tests/: README.md  readme.txt  repro_notification_bug.py  test_alert_evaluator.py  test_alert_schema_validator.py  test_api.py  test_base_data_downloader.py  test_bot_factory.py  test_bot_manager.py  test_broker_binance.py  test_broker_factory.py  test_broker_ibkr.py  test_business_logic.py  test_business_logic_core.py  test_common.py  test_composite_strategy_manager.py  test_cron_parser.py  test_data_downloader.py  test_data_downloader_factory.py  test_database_integration.py  test_email_attachments.py  test_emailer.py  test_error_handling.py  test_fmp_fallback.py  test_fundamentals_enrichment.py  test_hmm_lstm_backtest.py  test_indicator.py  test_integration_service_layer.py  test_live_bot_config.py  test_live_bot_database.py  test_live_data_feeds.py  test_live_feeds.py  test_new_config_system.py  test_optimizers.py  test_risk_controller.py  test_santiment_downloader.py  test_scheduler_main_application.py  test_scheduler_notification_integration.py  test_scheduler_service.py  test_screener_bot.py  (+19 more)
tmp/: check_imports.py  check_users.py  migrate_bots.py  test_auth.py  test_ttl.py
(+2193 files in other folders)
