[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "e-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E402",   # module-level import not at top — intentional (sys.path setup)
    "E501",   # line too long — handled by formatter
    "F403",   # star import — known intentional uses (ib_insync)
    "F405",   # may be undefined from star import — related to F403
    "UP006",  # Use `list` instead of `List` — gradual migration
    "UP007",  # Use `X | Y` instead of `Optional[X]` — gradual migration
    "UP035",  # `typing` import deprecated — gradual migration
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/tmp_*.py" = ["E402", "F401"]
"src/**/examples/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yfinance.*",
    "psycopg2.*",
    "apscheduler.*",
    "asyncpg",
    "pytz",
    "yaml",
    "jsonschema",
    "vectorbt",
    "san",
    "binance.*",
    "requests"
]
ignore_missing_imports = true
