[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "e-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E402",   # module-level import not at top — intentional (sys.path setup)
    "E501",   # line too long — handled by formatter
    "F403",   # star import — known intentional uses (ib_insync)
    "F405",   # may be undefined from star import — related to F403
    "UP006",  # Use `list` instead of `List` — gradual migration
    "UP007",  # Use `X | Y` instead of `Optional[X]` — gradual migration
    "UP035",  # `typing` import deprecated — gradual migration
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/tmp_*.py" = ["E402", "F401"]
"src/**/examples/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
# The pydantic plugin teaches mypy about Field() defaults and validators;
# without it every model instantiation reports false "missing named argument".
plugins = ["pydantic.mypy"]

# Third-party packages that ship no type information and have no stub package
# available on PyPI. Packages with real stubs (types-psutil, types-tqdm,
# types-croniter, types-openpyxl, types-reportlab, types-PyJWT, scipy) are
# installed as dev dependencies instead of being ignored here.
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yfinance.*",
    "psycopg2.*",
    "apscheduler.*",
    "asyncpg",
    "pytz",
    "yaml",
    "jsonschema",
    "vectorbt",
    "san",
    "binance.*",
    "requests",
    "backtrader.*",
    "hmmlearn.*",
    "joblib",
    "numba",
    "plotly.*",
    "pyarrow.*",
    "sklearn.*",
    "statsmodels.*",
    "seaborn",
    "scipy.*",
    "websocket",
    "anthropic",
    "onnxmltools",
    "onnxmltools.*",
    "onnxconverter_common.*",
    "onnxruntime",
    "pomegranate.*",
    "redis",
    "zstandard",
]
ignore_missing_imports = true
