[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "e-trading"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E402",   # module-level import not at top — intentional (sys.path setup)
    "E501",   # line too long — handled by formatter
    "F403",   # star import — known intentional uses (ib_insync)
    "F405",   # may be undefined from star import — related to F403
    "UP006",  # Use `list` instead of `List` — gradual migration
    "UP007",  # Use `X | Y` instead of `Optional[X]` — gradual migration
    "UP035",  # `typing` import deprecated — gradual migration
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/tmp_*.py" = ["E402", "F401"]
"src/**/examples/*.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
# The pydantic plugin teaches mypy about Field() defaults and validators;
# without it every model instantiation reports false "missing named argument".
plugins = ["pydantic.mypy"]
disable_error_code = ["annotation-unchecked"]


# Third-party packages that ship no type information and have no stub package
# available on PyPI. Packages with real stubs (types-psutil, types-tqdm,
# types-croniter, types-openpyxl, types-reportlab, types-PyJWT, scipy) are
# installed as dev dependencies instead of being ignored here.
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "psycopg2.*",
    "apscheduler.*",
    "asyncpg",
    "pytz",
    "yaml",
    "jsonschema",
    "vectorbt",
    "san",
    "binance.*",
    "requests",
    "backtrader.*",
    "hmmlearn.*",
    "joblib",
    "numba",
    "plotly.*",
    "pyarrow.*",
    "sklearn.*",
    "statsmodels.*",
    "seaborn",
    "scipy.*",
    "websocket",
    "onnxmltools",
    "onnxmltools.*",
    "onnxconverter_common.*",
    "onnxruntime",
    "pomegranate.*",
    "redis",
    "zstandard",
]
ignore_missing_imports = true

# pandas (via pandas-stubs) and anthropic ship type information that mypy follows
# only when the package is actually installed. pyright *requires* pandas-stubs to
# reach zero errors, so any environment shared with pyright has it installed —
# and mypy then type-checks pandas usage (hundreds of errors) or crashes inside
# anthropic's client. `follow_imports = skip` forces mypy to treat these as
# untyped (Any) regardless of installation, so mypy=0 is reproducible in the same
# environment as pyright. (ignore_missing_imports keeps the absent case quiet too.)
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "anthropic.*",
]
follow_imports = "skip"
ignore_missing_imports = true

# ml pipeline runner scripts import sibling x_NN modules by bare name at runtime
# (they chdir / sys.path-insert their own directory); mypy cannot resolve those.
[[tool.mypy.overrides]]
module = [
    "src.ml.pipeline.p00_hmm_3lstm.hmm.x_02_train_hmm",
    "src.ml.pipeline.p01_hmm_lstm.tests.test_pipeline_error_handling",
    "src.ml.pipeline.p02_cnn_lstm_xgboost.run_pipeline",
    "src.ml.pipeline.p02_cnn_lstm_xgboost.x_04_train_cnn_lstm",
    "src.ml.pipeline.p02_cnn_lstm_xgboost.x_05_extract_features",
    "src.ml.pipeline.p03_cnn_xgboost.tests.test_complete_pipeline",
]
disable_error_code = ["import-not-found"]

# Pyrefly (the VS Code extension some editors auto-enable) is not this
# project's type checker — mypy (above) is authoritative. Pyrefly's pandas
# stubs infer Series.items()/index labels as bare Hashable/float, producing
# false positives that don't affect mypy or runtime. Silence diagnostics
# entirely rather than maintaining a second, conflicting error surface.
[tool.pyrefly]
preset = "off"
